# meishi

./: alembic.ini  docker-compose.demo.yaml  docker-compose.dev.yaml  docker-compose.yaml  dockerfile  dockerfile.demo  entrypoint.sh  f110a597acd9_added_skill_table.py  pyproject.toml  startup.sh
api/: config.ini  db.py  dockerfile.demo  dockerfile.dev  entrypoint.sh  main.py  migrate_db.py  pyproject.toml  sample_table.py
api/cruds/: main.py
api/models/: user.py
api/routers/: main.py
api/schemas/: main.py
api/static/css/bootstrap-5.3.0-examples/album/: index.html
api/static/css/bootstrap-5.3.0-examples/album-rtl/: index.html
api/static/css/bootstrap-5.3.0-examples/badges/: index.html
api/static/css/bootstrap-5.3.0-examples/blog/: index.html
api/static/css/bootstrap-5.3.0-examples/blog-rtl/: index.html
api/static/css/bootstrap-5.3.0-examples/breadcrumbs/: index.html
api/static/css/bootstrap-5.3.0-examples/buttons/: index.html
api/static/css/bootstrap-5.3.0-examples/carousel/: index.html
api/static/css/bootstrap-5.3.0-examples/carousel-rtl/: index.html
api/static/css/bootstrap-5.3.0-examples/cheatsheet/: index.html
api/static/css/bootstrap-5.3.0-examples/cheatsheet-rtl/: index.html
api/static/css/bootstrap-5.3.0-examples/checkout/: index.html
api/static/css/bootstrap-5.3.0-examples/checkout-rtl/: index.html
api/static/css/bootstrap-5.3.0-examples/dashboard-rtl/: index.html
api/templates/: 404.html  alert.html  base.html  body.html  header.html  home.html  login.html  sayhello.html  signup.html
frontend/: dockerfile.demo  package.json
(+27 files in other folders)
