[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
# jinja2 = "^3.1.2"
# black = "^23.11.0"
# python-multipart = "^0.0.6"
# passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# sqlalchemy = "^2.0.23"
# pydantic = {extras = ["email"], version = "^2.5.1"}
# python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.30"
aiomysql = "^0.2.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
alembic = "^1.14.0"
sqlmodel = "^0.0.24"
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
